--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:onnx2connx-convert.helloWorld"
+    "onCommand:onnx2connx-convert.convert"
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "onnx2connx-convert.convert"
+        }
+      ]
+    },
     "commands": [
       {
-        "command": "onnx2connx-convert.helloWorld",
-        "title": "Hello World"
+        "command": "onnx2connx-convert.convert",
+        "title": "Convert ONNX to CONNX"
       }
     ]
   },
@@ -41,5 +48,8 @@
     "glob": "^7.1.7",
     "mocha": "^9.1.3",
     "typescript": "^4.5.3"
+  },
+  "dependencies": {
+    "form-data": "^4.0.0"
   }
 }
