--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "onnx2connx-convert",
   "description": "",
   "version": "0.0.1",
+  "publisher": "neowine",
   "engines": {
     "vscode": "^1.63.0"
   },
@@ -10,10 +11,29 @@
     "Other"
   ],
   "activationEvents": [
+    "onView:opw",
     "onCommand:onnx2connx-convert.convert"
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "connx",
+          "title": "ONNX to CONNX explorer",
+          "icon": "./src/1.png"
+        }
+      ]
+    },
+    "views": {
+      "connx": [
+        {
+          "id": "opw",
+          "type": "webview",
+          "name": "ONNX to CONNX"
+        }
+      ]
+    },
     "menus": {
       "explorer/context": [
         {
@@ -50,6 +70,7 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "request": "^2.88.2"
   }
 }
